--- a/index.html
+++ b/index.html
@@ -13,21 +13,179 @@
     <div class="container">
         <div class="header">
             <div class="menu">
-                <div class="group_1">
-                    <img src="image/icon.png" alt="icon">
-                    <img src="image/lupa.png" alt="lupa">
+                <div class="menu_logo">
+                    <a href="#" style="max-width: 44px;
+                    max-height: 38px;"><img src="image/icon.png" alt="icon"></a>
+                    <a href="#" style="max-height: 26px;
+                    max-width: 26px;"><img src="image/lupa.png" alt="lupa"></a>
                 </div>
-                <div class="group_2">
-                    <img src="image/Forma 1.png" alt="main">
-                    <img src="image/bust.png" alt="bust">
-                    <img src="image/telega.png" alt="telega">
+                <div class="menu_main">
+                    <a href="#" style="max-width: 32px;
+                    max-height: 23px;"><img src="image/Forma.png" alt="main"></a>
+                    <a href="#" style="max-width: 29px;
+                    max-height: 29px"><img src="image/bust.png" alt="bust"></a>
+                    <a style="max-height: 29px;
+                    max-width: 32px;" href="#"><img src="image/telega.png" alt="telega"></a>
                 </div>
             </div>
-            <div></div>
+            <div class="main_top">
+                <div><img style="width: 800px" src="image/Card1.png" alt="Card1"></div>
+                <div class="brand"><img style="max-width: 405px;" src="image/Brand.png" alt="Brand"></div>
+            </div>
         </div>
-        <div class="top_content"></div>
-        <div class="main_content"></div>
-        <div class="footer"></div>
+        <div class="top_content">
+            <div class="women">
+                <span class="title">30% off</span>
+                <span class="subtitle">for women</span>
+            </div>
+            <div class="men">
+                <span class="title">hot deal</span>
+                <span class="subtitle">for men</span>
+            </div>
+            <div class="kids">
+                <span class="title">new arrivals</span>
+                <span class="subtitle">for kids</span>
+            </div>
+            <div class="accesories">
+                <span class="title">LUXIROUS & TRENDY</span>
+                <span class="subtitle">ACCESORIES</span>
+            </div>
+        </div>
+        <div class="main_content">
+            <span class="products_title">Fetured Items</span>
+            <p class="products_subtitle">Shop for items based on what we featured in this week</p>
+            <div class="products_item">
+                <div class="products_item_photo">
+                    <img src="image/product1.png" alt="product description" height="420">
+                </div>
+                <div class="products_item_txt">
+                    <span class="products_item_title">ellery x m'o capsule </span>
+                    <p class="products_item_subtitle">Known for her sculptural takes on traditional tailoring,
+                        Australian
+                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <span class="products_item_price">$52.00</span>
+                </div>
+            </div>
+            <div class="products_item">
+                <div class="products_item_photo">
+                    <img src="image/product2.png" alt="product description" height="420">
+                </div>
+                <div class="products_item_txt">
+                    <span class="products_item_title">ellery x m'o capsule </span>
+                    <p class="products_item_subtitle">Known for her sculptural takes on traditional tailoring,
+                        Australian
+                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <span class="products_item_price">$52.00</span>
+                </div>
+            </div>
+            <div class="products_item">
+                <div class="products_item_photo">
+                    <img src="image/product3.png" alt="product description" height="420">
+                </div>
+                <div class="products_item_txt">
+                    <span class="products_item_title">ellery x m'o capsule </span>
+                    <p class="products_item_subtitle">Known for her sculptural takes on traditional tailoring,
+                        Australian
+                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <span class="products_item_price">$52.00</span>
+                </div>
+            </div>
+            <div class="products_item">
+                <div class="products_item_photo">
+                    <img src="image/product4.png" alt="product description" height="420">
+                </div>
+                <div class="products_item_txt">
+                    <span class="products_item_title">ellery x m'o capsule </span>
+                    <p class="products_item_subtitle">Known for her sculptural takes on traditional tailoring,
+                        Australian
+                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <span class="products_item_price">$52.00</span>
+                </div>
+            </div>
+            <div class="products_item">
+                <div class="products_item_photo">
+                    <img src="image/product5.png" alt="product description" height="420">
+                </div>
+                <div class="products_item_txt">
+                    <span class="products_item_title">ellery x m'o capsule </span>
+                    <p class="products_item_subtitle">Known for her sculptural takes on traditional tailoring,
+                        Australian
+                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <span class="products_item_price">$52.00</span>
+                </div>
+            </div>
+            <div class="products_item">
+                <div class="products_item_photo">
+                    <img src="image/product6.png" alt="product description" height="420">
+                </div>
+                <div class="products_item_txt">
+                    <span class="products_item_title">ellery x m'o capsule </span>
+                    <p class="products_item_subtitle">Known for her sculptural takes on traditional tailoring,
+                        Australian
+                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <span class="products_item_price">$52.00</span>
+                </div>
+            </div>
+            <button class="products_btn">Browse All Product</button>
+        </div>
+        <div class="footer">
+            <div class="features">
+                <div class="features_item">
+                    <img src="image/icon1.svg" alt="icon1">
+                    <span class="features_item_title">Free Delivery</span>
+                    <p class="features_item_subtitle">Worldwide delivery on all. Authorit tively morph next-generation
+                        innov tion
+                        with extensive models.</p>
+                </div>
+                <div class="features_item">
+                    <img src="image/icon2.svg" alt="icon2">
+                    <span class="features_item_title">Sales &amp;&nbsp;discounts</span>
+                    <p class="features_item_subtitle">Worldwide delivery on all. Authorit tively morph next-generation
+                        innov tion
+                        with extensive models.</p>
+                </div>
+                <div class="features_item">
+                    <img src="image/icon3.svg" alt="icon3">
+                    <span class="features_item_title">Quality assurance</span>
+                    <p class="features_item_subtitle">Worldwide delivery on all. Authorit tively morph next-generation
+                        innov tion
+                        with extensive models.</p>
+                </div>
+            </div>
+            <div class="subscribe">
+                <div class="subscribe_info">
+                    <div class="subscribe_info_face"></div>
+                    <p class="subscribe_info_title">&laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi,
+                        <span>a&nbsp;pulvinar purus condimentum&raquo;</span>
+                    </p>
+                </div>
+                <div class="subscribe_form">
+                    <span class="subscribe_form_title">subscribe</span>
+                    <span class="subscribe_form_subtitle">for our newletter and promotion</span>
+                    <form action="#" class="subscribe_form_all">
+                        <input class="subscribe_form_email" type="email" placeholder="Enter Your Email" required>
+                        <input class="subscribe_form_btn" type="submit" value="Subscribe">
+                    </form>
+                </div>
+            </div>
+            <div class="end">
+                <p class="end_text">&copy; 2021 Brand All Rights Reserved.</p>
+                <div class="end_socials">
+                    <a href="#" class="end_socials_item">
+                        <img src="image/facebook.png" alt="fb">
+                    </a>
+                    <a href="#" class="end_socials_item">
+                        <img src="image/instagram.png" alt="insta">
+                    </a>
+                    <a href="#" class="end_socials_item">
+                        <img src="image/P.png" alt="P">
+                    </a>
+                    <a href="#" class="end_socials_item">
+                        <img src="image/twitter.png" alt="tw">
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
