--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>index</title>
 </head>
 
 <body>
@@ -15,17 +15,17 @@
             <nav class="menu">
                 <section class="menu menu_logo">
                     <a href="#" style="max-width: 44px;
-                    max-height: 38px;"><img src="image/icon.png" alt="icon"></a>
+            max-height: 38px;"><img src="image/icon.png" alt="icon"></a>
                     <a href="#" style="max-height: 26px;
-                    max-width: 26px;"><img src="image/lupa.png" alt="lupa"></a>
+            max-width: 26px;"><img src="image/lupa.png" alt="lupa"></a>
                 </section>
                 <section class="menu menu_main">
                     <a href="#" style="max-width: 32px;
-                    max-height: 23px;"><img src="image/Forma.png" alt="main"></a>
+            max-height: 23px;"><img src="image/Forma.png" alt="main"></a>
                     <a href="#" style="max-width: 29px;
-                    max-height: 29px"><img src="image/bust.png" alt="bust"></a>
+            max-height: 29px"><img src="image/bust.png" alt="bust"></a>
                     <a style="max-height: 29px;
-                    max-width: 32px;" href="#"><img src="image/telega.png" alt="telega"></a>
+            max-width: 32px;" href="#"><img src="image/telega.png" alt="telega"></a>
                 </section>
             </nav>
             <section class="main_top">
@@ -33,9 +33,9 @@
                 <div class="brand"><img style="max-width: 405px;" src="image/Brand.png" alt="Brand"></div>
             </section>
         </header>
-        <main class="main_content">
+        <main>
             <section class="categories">
-                <section class="categories categories_item">
+                <section class="categories_item">
                     <div class="categories categories_item women">
                         <span class="txt title">30% off</span>
                         <span class="txt subtitle">for women</span>
@@ -59,8 +59,8 @@
                 </section>
             </section>
             <section class="products">
-                <span class="products_title">Fetured Items</span>
-                <header class="products_subtitle">Shop for items based on what we featured in this week</header>
+                <header class="products_title">Fetured Items</header>
+                <span class="products_subtitle">Shop for items based on what we featured in this week</span>
                 <section class="products_item">
                     <img class="products_item_photo" src="image/product1.png" alt="product description" height="420">
                     <div class="products_item_txt">
