--- a/catalog.html
+++ b/catalog.html
@@ -20,8 +20,45 @@
                     max-width: 26px;"><img src="image/lupa.png" alt="lupa"></a>
                 </section>
                 <section class="menu menu_main">
-                    <a href="#" style="max-width: 32px;
-                    max-height: 23px;"><img src="image/Forma.png" alt="main"></a>
+                    <div>
+                        <label class="mm_form" for="main_menu">
+                            <span class="mm_span"></span>
+                        </label>
+                        <input type="checkbox" id="main_menu">
+                        <div class="menu_content">
+                            <button class="mc_main_btn">menu</button>
+                            <section>
+                                <button class="mc_btn">men</button>
+                                <ul class="mc_list">
+                                    <li><button class="mc_list_btn">Accesories</button></li>
+                                    <li><button class="mc_list_btn">Bags</button></li>
+                                    <li><button class="mc_list_btn">Denim</button></li>
+                                    <li><button class="mc_list_btn">T-Shirts</button></li>
+                                </ul>
+                            </section>
+                            <section>
+                                <button class="mc_btn">women</button>
+                                <ul class="mc_list">
+                                    <li><button class="mc_list_btn">Accesories</button></li>
+                                    <li><button class="mc_list_btn">Jackets & Coats</button></li>
+                                    <li><button class="mc_list_btn">Polos</button></li>
+                                    <li><button class="mc_list_btn">T-Shirts</button></li>
+                                    <li><button class="mc_list_btn">T-Shirts</button></li>
+                                </ul>
+                            </section>
+                            <section>
+                                <button class="mc_btn">kids</button>
+                                <ul class="mc_list">
+                                    <li><button class="mc_list_btn">Accessories</button></li>
+                                    <li><button class="mc_list_btn">Jackets & Coats</button></li>
+                                    <li><button class="mc_list_btn">Polos</button></li>
+                                    <li><button class="mc_list_btn">T-Shirts</button></li>
+                                    <li><button class="mc_list_btn">Shirts</button></li>
+                                    <li><button class="mc_list_btn">Bags</button></li>
+                                </ul>
+                            </section>
+                        </div>
+                    </div>
                     <a href="#" style="max-width: 29px;
                     max-height: 29px"><img src="image/bust.png" alt="bust"></a>
                     <a style="max-height: 29px;
