--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../HomeWork/scss/style.css">
     <title>index</title>
 </head>
 
@@ -24,7 +24,7 @@
                         <label class="mm_form" for="main_menu">
                             <span class="mm_span"></span>
                         </label>
-                        <input type="checkbox" id="main_menu">
+                        <input class="checkbox" type="checkbox" id="main_menu">
                         <div class="menu_content">
                             <button class="mc_main_btn">menu</button>
                             <section>
