--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
                             </section>
                         </div>
                     </div>
-                    <a href="#" style="max-width: 29px;
-            max-height: 29px"><img src="image/bust.png" alt="bust"></a>
-                    <a style="max-height: 29px;
-            max-width: 32px;" href="#"><img src="image/telega.png" alt="telega"></a>
+                    <a class="mm_lc" href="#"><img src="image/bust.png" alt="bust"></a>
+                    <a class="mm_bb" href="#"><img src="image/telega.png" alt="telega"></a>
                 </section>
             </nav>
             <section class="main_top">
-                <div><img style="width: 800px" src="image/Card1.png" alt="Card1"></div>
-                <div class="brand"><img src="image/Brand.png" alt="Brand"></div>
+                <div><img class="top_image" src="image/Card1.png" alt="Card1"></div>
+                <div class="brand">
+                    <img class="brand_img" src="image/Brand.png" alt="Brand">
+                </div>
             </section>
         </header>
         <main>
