--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cart</title>
+    <title>Registration</title>
     <link rel="stylesheet" href="../HomeWork/scss/style.css">
 </head>
 
@@ -59,14 +59,12 @@
                             </section>
                         </div>
                     </div>
-                    <a href="#" style="max-width: 29px;
-                    max-height: 29px"><img src="image/bust.png" alt="bust"></a>
-                    <a style="max-height: 29px;
-                    max-width: 32px;" href="#"><img src="image/telega.png" alt="telega"></a>
+                    <a href="#" class="mm_lc"><img src="image/bust.png" alt="bust"></a>
+                    <a class="mm_bb" href="#"><img src="image/telega.png" alt="telega"></a>
                 </section>
             </nav>
             <section class="heading_title">
-                <div>
+                <div class="htt">
                     <button class="heading_title_txt">registration</button>
                 </div>
                 <div>
@@ -78,20 +76,21 @@
             <section class="reg_form">
                 <form action="#" method="post">
                     <div>
-                        <span>your name</span>
+                        <span>Your Name</span>
                         <input class="ca_input" type="text" placeholder="First Name">
                         <input class="ca_input" type="text" placeholder="Last Name">
                     </div>
-                    <div>
+                    <div class="radio">
                         <label><input type="radio" name="radio_btn">Male</label>
                         <label><input type="radio" name="radio_btn">Female</label>
                     </div>
                     <div>
-                        <span>login details</span>
+                        <span>Login details</span>
                         <input class="ca_input" type="text" placeholder="Email">
                         <input class="ca_input" type="password" placeholder="Password">
                     </div>
-                    <p>Please use 8 or more characters, with at least 1 number and a mixture of uppercase and lowercase
+                    <p class="reg_txt">Please use 8 or more characters, with at least 1 number and a mixture of
+                        uppercase and lowercase
                         letters</p>
                 </form>
                 <button class="rf_btn">join now</button>
