--- a/cart.html
+++ b/cart.html
@@ -59,14 +59,12 @@
                             </section>
                         </div>
                     </div>
-                    <a href="#" style="max-width: 29px;
-                    max-height: 29px"><img src="image/bust.png" alt="bust"></a>
-                    <a style="max-height: 29px;
-                    max-width: 32px;" href="#"><img src="image/telega.png" alt="telega"></a>
+                    <a href="#" class="mm_lc"><img src="image/bust.png" alt="bust"></a>
+                    <a class="mm_bb" href="#"><img src="image/telega.png" alt="telega"></a>
                 </section>
             </nav>
             <section class="heading_title">
-                <div>
+                <div class="htt">
                     <button class="heading_title_txt">shopping cart</button>
                 </div>
                 <div>
