--- a/product.html
+++ b/product.html
@@ -59,17 +59,15 @@
                             </section>
                         </div>
                     </div>
-                    <a href="#" style="max-width: 29px;
-                    max-height: 29px"><img src="image/bust.png" alt="bust"></a>
-                    <a style="max-height: 29px;
-                    max-width: 32px;" href="#"><img src="image/telega.png" alt="telega"></a>
+                    <a href="#" class="mm_lc"><img src="image/bust.png" alt="bust"></a>
+                    <a class="mm_bb" href="#"><img src="image/telega.png" alt="telega"></a>
                 </section>
             </nav>
             <section class="heading_title">
-                <div>
+                <div class="htt">
                     <button class="heading_title_txt">new arrivals</button>
                 </div>
-                <div>
+                <div class="htb">
                     <button class="heading_title_btn">home</button>
                     <button class="heading_title_btn">/ men</button>
                     <button class="heading_title_btn">/ new arrivals</button>
